<resources>
    <string name="app_name">Homework1</string>
    <string name="value1">Value 1:</string>
    <string name="value2">Value 2:</string>
    <string name="opString">Operator:</string>
    <string name="calculate">CALCULATE</string>
    <string name="answerString" />
    <string name="defaultZero">0</string>
    <string-array name="operators_array">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
</resources>
